// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemList > snapshots > should render empty list 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          0
           total
        </div>
      </div>
    </div>
    <div
      class="list__masonry"
    >
      <p
        class="list__empty"
      >
        No items
      </p>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render list with items 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
      </div>
    </div>
    <div
      class="list__masonry"
    >
      <div
        aria-label="Select Item 1"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 1
          </div>
          <div
            class="item-card__meta"
          >
            Summary 1
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 2"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 2
          </div>
          <div
            class="item-card__meta"
          >
            Summary 2
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 3"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 3
          </div>
          <div
            class="item-card__meta"
          >
            Summary 3
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with add button 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
        <button
          class="list__addButton"
          type="button"
        >
          + Add Item
        </button>
      </div>
    </div>
    <div
      class="list__masonry"
    >
      <div
        aria-label="Select Item 1"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 1
          </div>
          <div
            class="item-card__meta"
          >
            Summary 1
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 2"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 2
          </div>
          <div
            class="item-card__meta"
          >
            Summary 2
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 3"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 3
          </div>
          <div
            class="item-card__meta"
          >
            Summary 3
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with pagination on multiple pages 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          50
           total
        </div>
      </div>
    </div>
    <div
      class="list__masonry"
    >
      <div
        aria-label="Select Item 26"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 26
          </div>
          <div
            class="item-card__meta"
          >
            Summary 26
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 27"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 27
          </div>
          <div
            class="item-card__meta"
          >
            Summary 27
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 28"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 28
          </div>
          <div
            class="item-card__meta"
          >
            Summary 28
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 29"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 29
          </div>
          <div
            class="item-card__meta"
          >
            Summary 29
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 30"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 30
          </div>
          <div
            class="item-card__meta"
          >
            Summary 30
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 31"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 31
          </div>
          <div
            class="item-card__meta"
          >
            Summary 31
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 32"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 32
          </div>
          <div
            class="item-card__meta"
          >
            Summary 32
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 33"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 33
          </div>
          <div
            class="item-card__meta"
          >
            Summary 33
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 34"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 34
          </div>
          <div
            class="item-card__meta"
          >
            Summary 34
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 35"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 35
          </div>
          <div
            class="item-card__meta"
          >
            Summary 35
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 36"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 36
          </div>
          <div
            class="item-card__meta"
          >
            Summary 36
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 37"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 37
          </div>
          <div
            class="item-card__meta"
          >
            Summary 37
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 38"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 38
          </div>
          <div
            class="item-card__meta"
          >
            Summary 38
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 39"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 39
          </div>
          <div
            class="item-card__meta"
          >
            Summary 39
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 40"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 40
          </div>
          <div
            class="item-card__meta"
          >
            Summary 40
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 41"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 41
          </div>
          <div
            class="item-card__meta"
          >
            Summary 41
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 42"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 42
          </div>
          <div
            class="item-card__meta"
          >
            Summary 42
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 43"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 43
          </div>
          <div
            class="item-card__meta"
          >
            Summary 43
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 44"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 44
          </div>
          <div
            class="item-card__meta"
          >
            Summary 44
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 45"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 45
          </div>
          <div
            class="item-card__meta"
          >
            Summary 45
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 46"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 46
          </div>
          <div
            class="item-card__meta"
          >
            Summary 46
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 47"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 47
          </div>
          <div
            class="item-card__meta"
          >
            Summary 47
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 48"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 48
          </div>
          <div
            class="item-card__meta"
          >
            Summary 48
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 49"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 49
          </div>
          <div
            class="item-card__meta"
          >
            Summary 49
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 50"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 50
          </div>
          <div
            class="item-card__meta"
          >
            Summary 50
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        2
         of 
        2
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with selected item 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
      </div>
    </div>
    <div
      class="list__masonry"
    >
      <div
        aria-label="Select Item 1"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 1
          </div>
          <div
            class="item-card__meta"
          >
            Summary 1
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 2"
        class="item-card item-card--textonly item-card--selected"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 2
          </div>
          <div
            class="item-card__meta"
          >
            Summary 2
          </div>
        </div>
      </div>
      <div
        aria-label="Select Item 3"
        class="item-card item-card--textonly"
        role="button"
        tabindex="0"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <div
          class="item-card__body"
        >
          <div
            class="item-card__name"
          >
            Item 3
          </div>
          <div
            class="item-card__meta"
          >
            Summary 3
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;
